[tool.poetry]
name = "find-tutors"
version = "0.1.0"
description = "Flask application to find English tutors."
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
gunicorn = "^20.0.4"
Flask-SQLAlchemy = "^2.4.1"
Flask-Migrate = "^2.5.2"
python-dotenv = "^0.10.5"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"
autopep8 = "^1.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
